fixed media images path

--- a/index.html
+++ b/index.html
@@ -35,14 +35,13 @@
 
 
                 <li class="dropdown">
-                    <div class="about"><a class="nav-link ">About</a>
+                        <a href="#about" class="nav-link" data-target="about">About</a>
                         <div class="dropdown-content">
                             <p><a href="About/History.html" data-target="history">History</a></p>
                             <p><a href="About/Mandate.html" data-target="mandate">Mandate</a></p>
                             <p><a href="About/Support Services Directorate.html" data-target="support">Support Service Directorate</a></p>
                             <p><a href="About/Organogram Page.html" data-target="organogram">Organogram</a></p>
                         </div>
-                    </div>
                 </li>
 
 
@@ -1022,7 +1021,7 @@
                 <!-- Gallery items will be populated by JavaScript -->
                 <div class="empty-state">
                     <i class="fas fa-camera-retro"></i>
-                    <h3>No media found</h3>
+                    <h3>No ./Media found</h3>
                     <p>Try adjusting your search or filter options.</p>
                     <button class="btn">Reset Filters</button>
 
@@ -1051,56 +1050,56 @@
                     title: "Coastal Ecosystem Research",
                     date: "2023-06-15",
                     event: "research",
-                    image: "media/DSC_0005.JPG"
+                    image: "./Media/DSC_0005.JPG"
                 },
                 {
                     id: 2,
                     title: "Annual Marine Conference",
                     date: "2023-05-22",
                     event: "conference",
-                    image: "media/DSC_1406.JPG"
+                    image: "./Media/DSC_1406.JPG"
                 },
                 {
                     id: 3,
                     title: "Fishermen Training Workshop",
                     date: "2023-07-10",
                     event: "workshop",
-                    image: "media/DSC_9570.JPG"
+                    image: "./Media/DSC_9570.JPG"
                 },
                 {
                     id: 4,
                     title: "Lake Victoria Study",
                     date: "2023-04-18",
                     event: "field",
-                    image: "media/DSC_6520.JPG"
+                    image: "./Media/DSC_6520.JPG"
                 },
                 {
                     id: 5,
                     title: "Community Aquaculture Project",
                     date: "2023-03-05",
                     event: "community",
-                    image: "media/DSC_8571.JPG"
+                    image: "./Media/DSC_8571.JPG"
                 },
                 {
                     id: 6,
                     title: "Deep Sea Exploration",
                     date: "2023-08-12",
                     event: "research",
-                    image: "media/A scientist conducting coral reef assessment.jpg"
+                    image: "./Media/A scientist conducting coral reef assessment.jpg"
                 },
                 {
                     id: 7,
                     title: "International Fisheries Summit",
                     date: "2023-02-28",
                     event: "conference",
-                    image: "media/DSC_1698.JPG"
+                    image: "./Media/DSC_1698.JPG"
                 },
                 {
                     id: 8,
                     title: "Aquaculture Techniques Training",
                     date: "2023-07-30",
                     event: "workshop",
-                    image: "media/DSC_8566.JPG"
+                    image: "./Media/DSC_8566.JPG"
                 },
 
 
@@ -1109,224 +1108,224 @@
                     title: "Coral Reef Monitoring",
                     date: "2023-06-05",
                     event: "field",
-                    image: "media/A scientist conducting coral reef assessment (2).jpg"
+                    image: "./Media/A scientist conducting coral reef assessment (2).jpg"
                 },
                 {
                     id: 10,
                     title: "Marine Conservation Awareness",
                     date: "2023-04-22",
                     event: "community",
-                    image: "media/DSC_1882.JPG"
+                    image: "./Media/DSC_1882.JPG"
                 },
                 {
                     id: 11,
                     title: "Marine Biodiversity Survey",
                     date: "2023-09-15",
                     event: "research",
-                    image: "media/DSC_1999.jpeg"
+                    image: "./Media/DSC_1999.jpeg"
                 },
                 {
                     id: 12,
                     title: "Youth in Fisheries Workshop",
                     date: "2023-03-18",
                     event: "workshop",
-                    image: "media/DSC_1864.JPG"
+                    image: "./Media/DSC_1864.JPG"
                 },
                 {
                     id: 12,
                     title: "Youth in Fisheries Workshop",
                     date: "2023-03-18",
                     event: "workshop",
-                    image: "media/DSC_1864.JPG"
+                    image: "./Media/DSC_1864.JPG"
                 },
                 {
                     id: 12,
                     title: "Youth in Fisheries Workshop",
                     date: "2023-03-18",
                     event: "workshop",
-                    image: "media/DSC_1864.JPG"
+                    image: "./Media/DSC_1864.JPG"
                 },
                 {
                     id: 12,
                     title: "Youth in Fisheries Workshop",
                     date: "2023-03-18",
                     event: "workshop",
-                    image: "media/DSC_1864.JPG"
+                    image: "./Media/DSC_1864.JPG"
                 },
                 {
                     id: 12,
                     title: "Youth in Fisheries Workshop",
                     date: "2023-03-18",
                     event: "workshop",
-                    image: "media/DSC_1864.JPG"
+                    image: "./Media/DSC_1864.JPG"
                 },
                 {
                     id: 12,
                     title: "Youth in Fisheries Workshop",
                     date: "2023-03-18",
                     event: "workshop",
-                    image: "media/DSC_1864.JPG"
+                    image: "./Media/DSC_1864.JPG"
                 },
                 {
                     id: 12,
                     title: "Youth in Fisheries Workshop",
                     date: "2023-03-18",
                     event: "workshop",
-                    image: "media/DSC_1864.JPG"
+                    image: "./Media/DSC_1864.JPG"
                 },
                 {
                     id: 12,
                     title: "Youth in Fisheries Workshop",
                     date: "2023-03-18",
                     event: "workshop",
-                    image: "media/DSC_1864.JPG"
+                    image: "./Media/DSC_1864.JPG"
                 },
                 {
                     id: 12,
                     title: "Youth in Fisheries Workshop",
                     date: "2023-03-18",
                     event: "workshop",
-                    image: "media/DSC_1864.JPG"
+                    image: "./Media/DSC_1864.JPG"
                 },
                 {
                     id: 12,
                     title: "Youth in Fisheries Workshop",
                     date: "2023-03-18",
                     event: "workshop",
-                    image: "media/DSC_1864.JPG"
+                    image: "./Media/DSC_1864.JPG"
                 },
                 {
                     id: 12,
                     title: "Youth in Fisheries Workshop",
                     date: "2023-03-18",
                     event: "workshop",
-                    image: "media/DSC_1864.JPG"
+                    image: "./Media/DSC_1864.JPG"
                 },
                 {
                     id: 12,
                     title: "Youth in Fisheries Workshop",
                     date: "2023-03-18",
                     event: "workshop",
-                    image: "media/DSC_1864.JPG"
+                    image: "./Media/DSC_1864.JPG"
                 },
                 {
                     id: 12,
                     title: "Youth in Fisheries Workshop",
                     date: "2023-03-18",
                     event: "workshop",
-                    image: "media/DSC_1864.JPG"
+                    image: "./Media/DSC_1864.JPG"
                 },
                 {
                     id: 12,
                     title: "Youth in Fisheries Workshop",
                     date: "2023-03-18",
                     event: "workshop",
-                    image: "media/DSC_1864.JPG"
+                    image: "./Media/DSC_1864.JPG"
                 },
                 {
                     id: 12,
                     title: "Youth in Fisheries Workshop",
                     date: "2023-03-18",
                     event: "workshop",
-                    image: "media/DSC_1864.JPG"
+                    image: "./Media/DSC_1864.JPG"
                 },
                 {
                     id: 12,
                     title: "Youth in Fisheries Workshop",
                     date: "2023-03-18",
                     event: "workshop",
-                    image: "media/DSC_1864.JPG"
+                    image: "./Media/DSC_1864.JPG"
                 },
                 {
                     id: 12,
                     title: "Youth in Fisheries Workshop",
                     date: "2023-03-18",
                     event: "workshop",
-                    image: "media/DSC_1864.JPG"
+                    image: "./Media/DSC_1864.JPG"
                 },
                 {
                     id: 12,
                     title: "Youth in Fisheries Workshop",
                     date: "2023-03-18",
                     event: "workshop",
-                    image: "media/DSC_1864.JPG"
+                    image: "./Media/DSC_1864.JPG"
                 },
                 {
                     id: 12,
                     title: "Youth in Fisheries Workshop",
                     date: "2023-03-18",
                     event: "workshop",
-                    image: "media/DSC_1864.JPG"
+                    image: "./Media/DSC_1864.JPG"
                 },
                 {
                     id: 12,
                     title: "Youth in Fisheries Workshop",
                     date: "2023-03-18",
                     event: "workshop",
-                    image: "media/DSC_1864.JPG"
+                    image: "./Media/DSC_1864.JPG"
                 },
                 {
                     id: 12,
                     title: "Youth in Fisheries Workshop",
                     date: "2023-03-18",
                     event: "workshop",
-                    image: "media/DSC_1864.JPG"
+                    image: "./Media/DSC_1864.JPG"
                 },
                 {
                     id: 12,
                     title: "Youth in Fisheries Workshop",
                     date: "2023-03-18",
                     event: "workshop",
-                    image: "media/DSC_1864.JPG"
+                    image: "./Media/DSC_1864.JPG"
                 },
                 {
                     id: 12,
                     title: "Youth in Fisheries Workshop",
                     date: "2023-03-18",
                     event: "workshop",
-                    image: "media/DSC_1864.JPG"
+                    image: "./Media/DSC_1864.JPG"
                 },
                 {
                     id: 12,
                     title: "Youth in Fisheries Workshop",
                     date: "2023-03-18",
                     event: "workshop",
-                    image: "media/DSC_1864.JPG"
+                    image: "./Media/DSC_1864.JPG"
                 },
                 {
                     id: 12,
                     title: "Youth in Fisheries Workshop",
                     date: "2023-03-18",
                     event: "workshop",
-                    image: "media/DSC_1864.JPG"
+                    image: "./Media/DSC_1864.JPG"
                 },
                 {
                     id: 12,
                     title: "Youth in Fisheries Workshop",
                     date: "2023-03-18",
                     event: "workshop",
-                    image: "media/DSC_1864.JPG"
+                    image: "./Media/DSC_1864.JPG"
                 },
                 {
                     id: 12,
                     title: "Youth in Fisheries Workshop",
                     date: "2023-03-18",
                     event: "workshop",
-                    image: "media/DSC_1864.JPG"
+                    image: "./Media/DSC_1864.JPG"
                 },
                 {
                     id: 12,
                     title: "Youth in Fisheries Workshop",
                     date: "2023-03-18",
                     event: "workshop",
-                    image: "media/DSC_1864.JPG"
+                    image: "./Media/DSC_1864.JPG"
                 },
                 {
                     id: 12,
                     title: "Youth in Fisheries Workshop",
                     date: "2023-03-18",
                     event: "workshop",
-                    image: "media/DSC_1864.JPG"
+                    image: "./Media/DSC_1864.JPG"
                 }
 
             ];
@@ -1858,7 +1857,7 @@
         <!-- Social Media -->
         <div class="social-section">
             <h2 class="social-title">Connect With Us</h2>
-            <p>Follow KMFRI on social media for the latest updates and research news</p>
+            <p>Follow KMFRI on social ./Media for the latest updates and research news</p>
             <div class="social-icons">
                 <a href="https://facebook.com/kmfri" target="_blank" title="Facebook"><img src="facebook_icon.png"
                         alt="Facebook"></a>
