made responive to nav

--- a/Board of management/Board of management.html
+++ b/Board of management/Board of management.html
@@ -20,7 +20,7 @@
   <div class="chairman-card">
       <img src="../Board of management Prfl/wenwa.png" alt="Dr. Wenwa Akinyi Oranga">
       <h3>Dr. Wenwa Akinyi Oranga</h3>
-      <p>Chairman, Board of Management</p>
+      <p>Chairperson, Board of Management</p>
   </div>
 </a>
 
